Collapse by default the validation issues

--- a/client/stylesheets/components/_dataset-details.scss
+++ b/client/stylesheets/components/_dataset-details.scss
@@ -75,5 +75,23 @@ div.dataset-details__validation {
   }
   td, th {
     padding: 8px;
+    font-size: 90%;
+  }
+  tbody {
+    width: 100%;
+  }
+
+  .collapse{
+    cursor: pointer;
+    display: block;
+  }
+  .collapse + input{
+    display: none; /* hide the checkboxes */
+  }
+  .collapse + input + table {
+    display:none;
+  }
+  .collapse + input:checked + table {
+    display:table;
   }
 }
